hard code other field into html and hide on page load

--- a/index.html
+++ b/index.html
@@ -33,8 +33,13 @@
           <option value="back-end developer">Back End Developer</option>
           <option value="designer">Designer</option>          
           <option value="student">Student</option>
-          <option value="other">Other</option>  
-        </select>           
+          <option value="other">Other</option>
+        </select>
+        <div class="other_role_div">
+          <label for="other_role">Other:</label>
+          <input type="text" name="other_role" id="other_role"> 
+        </div>
+
       </fieldset>
       
       <fieldset class="shirt">
